# ur-connect

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  model.rs
src/parsing/: dom.rs  ics.rs  mod.rs
tests/: timetable_flow.rs
