[package]
name = "ur-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "rustls-tls"] }
cookie_store = "0.21"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
html-escape = "0.2"
once_cell = "1"
regex = "1"
url = "2.5"
kuchiki = "0.8"
ical = "0.10"
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
